# DevOps

./: README.md  db.sqlite3  go.mod  go.sum  manage.py
DevOps/: settings.py  urls.py  wsgi.py
PerfectApp/: apps.py  urls.py  views.py
auto_Deploy2/: main.py  pyproject.toml
auto_deploy/: main.py  pyproject.toml  ssh.py
check_domain/: checkdomain.py  domain.txt  host_ip.xlsx
domain_check/: go.mod  go.sum  main.go
my_blog/: form.html  gin-fileupload.go  go.mod  httproute1.go  main.go  upload.html
static/: index.html
whois_Domain/: test1.py
xpgame/: alien_invasion.py  pyproject.toml  settings.py  ship.py
zichan_check/: main.py  pyproject.toml
zichan_check/bysms/: db.sqlite3  manage.py
zichan_check/bysms/bysmss/: asgi.py  settings.py  urls.py  wsgi.py
zichan_check/bysms/common/: models.py
zichan_check/bysms/common/migrations/: 0001_initial.py
zichan_check/bysms/mgr/: customer.py  urls.py
zichan_check/bysms/sales/: urls.py  views.py
zichan_check/xpsms/: manage.py
zichan_check/xpsms/xpsms/: asgi.py  settings.py  urls.py  wsgi.py
