[tool.poetry]
name = "auto_deploy2"
version = "0.1.0"
description = ""
authors = ["PanZongQing <176578202@qq.com>"]

[tool.poetry.dependencies]
python = "3.8.10"
paramiko = "^2.11.0"
ansible = "^6.1.0"
pyside2 = "^5.15.2"
autopep8 = "^1.6.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"