[tool.poetry]
name = "auto_deploy"
version = "0.1.0"
description = ""
authors = ["PanZongQing <176578202@qq.com>"]

[tool.poetry.dependencies]
python = "^3.10"
paramiko = "^2.11.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "douban"
url = "https://pypi.doubanio.com/simple/"
